Fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ img {
 h1, h2 {
   color: #5d8432;
   text-transform: uppercase;
-  font-family: 'Patua One', sans-serif;
+  font-family: "Patua One", sans-serif;
 }
 
 figcaption {
@@ -20,9 +20,10 @@ figcaption {
   text-align: center;
 }
 
-nav{
+nav {
   font-size: 1.125rem;
   font-weight: bold;
+  font-family: cursive;
 }
 
 nav ol {
